--- a/src/styles/MovieListSelector.module.css
+++ b/src/styles/MovieListSelector.module.css
@@ -39,6 +39,7 @@
   align-items: center;
   width: 90%;
   justify-content: space-between;
+  color: #000;
 }
 
 .movie-list-name {
@@ -71,6 +72,7 @@
 
 .movie-list-description {
   margin-top: 1rem;
+  color: #000;
 }
 
 .movie-list-button {
